# deepfake-image-detector

./: .gitignore  api.py  app.py  main.py  pyproject.toml  training.ipynb
src/: dataset.py  evaluate.py  model.py  train.py
